// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TruncateMiddleDynamic should render 1`] = `
<DocumentFragment>
  <span
    class="min-w-0 overflow-hidden"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic should return the value if it fits the given container 1`] = `
<DocumentFragment>
  <span
    class="min-w-0 overflow-hidden"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic should return the value if it overflows the given container 1`] = `
<DocumentFragment>
  <span
    class="min-w-0 overflow-hidden"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic should return the value if the elements have no width 1`] = `
<DocumentFragment>
  <span
    class="min-w-0 overflow-hidden"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit.
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic should truncate value if doesn't overflow and availableWidth is set 1`] = `
<DocumentFragment>
  <span
    class="min-w-0 overflow-hidden"
  >
    L….
  </span>
</DocumentFragment>
`;

exports[`TruncateMiddleDynamic should truncate value if it overflows and availableWidth is set 1`] = `
<DocumentFragment>
  <span
    class="min-w-0 overflow-hidden"
  >
    D…b
  </span>
</DocumentFragment>
`;
